# cookbook

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
.github/workflows/: build.yml
docs/: capabilities.md  proposal-pasta-content-negotiation.md  roadmap.md
specs/: cookbook-addendum-airgap.docx  cookbook-architecture-M1.docx  cookbook-auth-v2-proposal.md  future-scenarios-grid.md  now-complete-v1.2.docx  now-guide-v1.2.docx  now-guide-v1.2.md  now-spec-v1.2.md  now-specifications-v1.2.tar  response-pasta-content-negotiation.md
src/main/c/: cookbook.c  cookbook_auth.c  cookbook_db_migrate.c  cookbook_db_postgres.c  cookbook_db_postgres_stub.c  cookbook_db_sqlite.c  cookbook_grid.c  cookbook_import.c  cookbook_policy.c  cookbook_semver.c  cookbook_server.c  cookbook_sha256.c  cookbook_store_fs.c  cookbook_store_s3.c  main.c
src/main/h/: cookbook.h  cookbook_auth.h  cookbook_db.h  cookbook_grid.h  cookbook_policy.h  cookbook_semver.h  cookbook_server.h  cookbook_sha256.h  cookbook_store.h
src/test/c/: cookbook_stress.c  cookbook_test.c
